[project]
name = "bpm-tagger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11.0"
dependencies = [
    "mediafile>=0.13.0",
    "tqdm>=4.67.1",
    # Trying to install tensorflow causes an error about 'tensorflow-io-gcs-filesystem'
    # https://github.com/tensorflow/io/issues/2087
    # I manually use a different version here:
    "tensorflow-io-gcs-filesystem==0.31.0",
    "tensorflow-intel==2.17.0",
    "tempocnn>=0.0.8",
]
